--- a/css/animations.css
+++ b/css/animations.css
@@ -1151,12 +1151,6 @@ stretchRight
 	margin-top: 20px;
 	width: 100%;
 	height: 100%;
-	background:
-		url(../img/cloud1.png) repeat-x,
-		url(../img/cloud2.png) repeat-x;
-	-webkit-animation: scene2 40s linear infinite ;
-	-moz-animation: scene2 40s linear infinite ;
-	-o-animation: scene2 40s linear infinite ;
-	-ms-animation: scene2 40s linear infinite ;
-	animation: scene2 40s linear infinite ;
+	background: url(../img/cloud1.png) repeat-x,url(../img/cloud2.png) repeat-x;
+
 }
